Copying dan-v changes to use pi-hole

--- a/config.cfg
+++ b/config.cfg
@@ -4,9 +4,7 @@
 # Every device must have a unique username.
 # You can generate up to 250 users at one time.
 users:
-  - phone
-  - laptop
-  - desktop
+  - aallrd
 
 # NOTE: You must "escape" any usernames with leading 0's, like "000dan"
 
@@ -87,7 +85,7 @@ local_service_ip: 172.16.0.1
 # which case a reboot will take place if necessary at the time specified (as
 # HH:MM) in the time zone of your Algo server. The default time zone is UTC.
 unattended_reboot:
-  enabled: false
+  enabled: true
   time: 06:00
 
 pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
